# opencat

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
opencat/: __init__.py  __main__.py  app.py  cli.py  config.py  history.py  platform_utils.py  protocol.py  state.py  ws_client.py
opencat/ui/: __init__.py  app.js  floating.css  floating.html  floating.js  index.html  style.css
opencat/ui/assets/: README.md  manifest.json
